<resources>
    <string name="app_name">Local Grocer</string>
    <string name="title_activity_user__details">User_Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_consumer">ConsumerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile Name</string>
    <string name="nav_header_subtitle">Phone Number</string>
    <string name="nav_header_email">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_consumer">Shops Near You</string>
    <string name="menu_shopkeeper_request">Add Shop</string>
    <string name="menu_manage_shop">Manage Shop</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_log_out">Log Out</string>

    <string name="home_second">Home Second</string>
    <string name="walkthrough_button_title">GET STARTED</string>
    <string name="walkthrough_text_title1">Loreum Epsum Title1</string>
    <string name="walkthrough_text_title2">Loreum Epsumyu Title2</string>
    <string name="walkthrough_text_title3">Loreu Epsum Title3</string>
    <string name="walkthrough_text_body1">Loreum epsum just a dummy text1</string>
    <string name="walkthrough_text_body2">Loreum epsum just a dummy text2</string>
    <string name="walkthrough_text_body3">Loreum epsum just a dummy text3</string>

    <string name="contact_us_alert_dialog">Enter Message Content</string>

    <string name="manageshop_item_list">Item List</string>
    <string name="manageshop_pending_orders">Pending Orders</string>
    <string name="manageshop_completed_orders">Completed Orders</string>
</resources>
