<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consumer"
            android:icon="@drawable/menu_consumer_icon"
            android:title="@string/menu_consumer" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/menu_shop_icon"
            android:title="@string/menu_shopkeeper_request" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/menu_contact_us"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/menu_my_profile"
            android:title="@string/menu_my_profile" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/menu_log_out"
            android:title="@string/menu_log_out" />
    </group>
</menu>
