<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_consumer_fragment">

    <fragment
        android:id="@+id/nav_consumer_fragment"
        android:name="com.example.localgrocer.ui.Consumer.ConsumerFragment"
        android:label="@string/menu_consumer"
        tools:layout="@layout/fragment_consumer">


    </fragment>


    <fragment
        android:id="@+id/nav_requestshop_fragment"
        android:name="com.example.localgrocer.ui.RequestShop.RequestShopFragment"
        android:label="@string/menu_shopkeeper_request"
        tools:layout="@layout/fragment_request_shop" >



    </fragment>

    <fragment
        android:id="@+id/nav_my_profile_fragment"
        android:name="com.example.localgrocer.ui.MyProfile.MyProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_myprofile" >
    </fragment>

    <fragment
        android:id="@+id/nav_manage_shop_fragment"
        android:name="com.example.localgrocer.ui.ManageShop.ManageShopFragment"
        android:label="@string/menu_manage_shop"
        tools:layout="@layout/fragment_manageshop" >
    </fragment>

</navigation>